# xpumanager

./: .clang-format-ignore  .clang-tidy  .dockerignore  .gitignore  .readthedocs.yaml  BUILDING.md  BUILDING.md.ext  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Jenkinsfile-dms-cluster  Jenkinsfile-xpum-cluster  Jenkinsfile.ext  KubernetesPod.yaml  LICENSE  LICENSE.md  MONITORING.md  Makefile  OTEL_STACK.md  README.md  REST_README.md  SECURITY.md  SMI_README.md  XPUM_PGP_KEY.pem  build.sh  builder-config.yaml  builder-config.yaml.in  check_license.py  conanfile.py  config-example.yaml  core.yml  go.mod  go.sum  intel_graphics_linux_pgp.pem  intel_graphics_linux_pgp_2021.pem  levelzero.yml  meson.build  meson_options.txt  post-in  postinst  (+8 more)
amcmcli/: CMakeLists.txt  main.cpp
amcmcli/src/: config.h.in  main.cpp
cli/: CMakeLists.txt
cli/src/: agentset_stub.cpp  cli_help_fmter.cpp  cli_help_fmter.h  cli_resource.cpp  cli_resource.h  cli_table.cpp  cli_table.h  cli_wrapper.cpp  cli_wrapper.h  comlet_agentset.cpp  comlet_agentset.h  comlet_base.cpp  comlet_base.h  comlet_config.cpp  comlet_config.h  comlet_diagnostic.cpp  comlet_diagnostic.h  comlet_discovery.cpp  comlet_discovery.h  comlet_dump.cpp  comlet_dump.h  comlet_firmware.cpp  comlet_firmware.h  comlet_group.cpp  comlet_group.h  comlet_health.cpp  comlet_health.h  comlet_log.cpp  comlet_log.h  comlet_policy.cpp  comlet_policy.h  comlet_ps.cpp  comlet_ps.h  comlet_reset.cpp  comlet_reset.h  comlet_sensor.cpp  comlet_sensor.h  comlet_statistics.cpp  comlet_statistics.h  comlet_top.cpp  (+31 more)
cli/testing/: comlet_discovery_unittest.cpp  comlet_version_unittest.cpp  testing_common_util.cpp  testing_common_util.h
core/: CMakeLists-amcfw.txt  CMakeLists.txt  DGMCore  Doxyfile  Makefile  README.md  cgo_helpers.h  cmake_install.cmake  const.go  core.go  core_static.go  doc.go  sudogdb  types-field-rewrites.yaml  types-mangle-const.yaml  types-mangle.yaml  types.go  types_static.go  zz_ApiVersion_string.go  zz_DevicePropertyFlag_string.go  zz_DeviceType_string.go  zz_Result_string.go
core/config/: pci.switch
core/include/: xpum_api.h  xpum_structs.h
core/kernels/: ze_sp_compute.spv
daemon/: CMakeLists.txt  XpumCoreServiceImpl.cc  XpumCoreServiceImpl.h  agent_config_core_service_impl.cpp  clientSample.cc  compileProto.sh  config.h  config.h.in  core.grpc.pb.cc  core.grpc.pb.h  core.pb.cc  core.pb.h  core.proto  daemon.cc  daemon.cpp  dump_raw_data_core_service_impl.cpp  firmware_update_service_impl.cpp  logger.h  statistics_core_service_impl.cpp  xpum.service.in  xpum.service.template  xpum.service.template.in  xpum.socket  xpum_core_service_impl.cpp  xpum_core_service_impl.h  xpum_core_service_unprivileged_impl.h
doc/: .gitignore  CLI doc.md  CLI_user_guide.md  CMakeLists.txt  Doxyfile  Install_guide.md  Prometheus_Exported_Metrics.csv  README.md  Restful API.md  amcmcli_user_guide.md  build.sh  hpe_redfish_host_interface_setup.md  index.rst  infrastructure.md  installation.rst  introduction.rst  readme.md  requirements.txt  restful.rst  smi_index.rst  smi_install_guide.md  smi_user_guide.md  win_index.rst  xpum_index.rst  xpum_win_user_guide.md
doc/smidoc/: CMakeLists.txt
doc/sphinxconf/: conf.py
doc/windoc/: CMakeLists.txt
doc/xpumdoc/: CMakeLists.txt
explore/: CMakeLists.txt  PciIds.cpp  PciIds.h  build.sh  logger.h  pci_database.h  test  test.cpp  try1.cpp  trypciid.cpp  workspace.code-workspace  xpum_config.h
hal/amc/: Makefile  amclib.cpp  amclib.h  common.cpp  common.h  mctp.h  mctp_constants.h  mctp_control.cpp  mctp_control_resp.cpp  mctp_init.cpp  mctp_protocol.cpp  meson.build  oem_vrsync.cpp  oem_vrsync.h  pldm.h  pldm_amc_gpu_reset.cpp  pldm_amc_gpu_reset.h  pldm_constants.h  pldm_discovery.cpp  pldm_discovery_resp.cpp  pldm_file_transfer.cpp  pldm_file_transfer.h  pldm_fru.cpp  pldm_fru.h  pldm_fru_helper.cpp  pldm_fru_resp.cpp  pldm_fwpackage.cpp  pldm_fwpackage.h  pldm_fwupdate.cpp  pldm_fwupdate.h  pldm_fwupdate_helper.cpp  pldm_fwupdate_resp.cpp  pldm_init.cpp  pldm_pdr_manager.cpp  pldm_pdr_manager.h  pldm_platform.cpp  pldm_platform.h  pldm_protocol.cpp  pldm_types.h  redfish.cpp  (+2 more)
hal/core/: Makefile  debug.cpp  debug.h  device.cpp  device.h  diagnostic.cpp  diagnostic.h  driver.cpp  driver.h  ecc.cpp  ecc.h  enginegroup.cpp  enginegroup.h  fabric.cpp  fabric.h  fan.cpp  fan.h  file_io.cpp  file_io.h  firmware.cpp  firmware.h  frequency.cpp  frequency.h  jsonwrapper.h  libxpum.vcxproj  libxpum.vcxproj.filters  memory.cpp  memory.h  meson.build  metric.cpp  metric.h  offline_page.cpp  offline_page.h  pci.cpp  pci.h  performance.cpp  performance.h  power.cpp  power.h  powerexp.cpp  (+20 more)
hal/fwupd/: Makefile  amcupd.cpp  amcupd.h  fwupd.cpp  fwupd.h  gscupd.cpp  gscupd.h  meson.build  sysmanupd.cpp  sysmanupd.h
ial/api/: meson.build  xpum_api.cpp  xpum_api.h  xpum_structs.h
ial/cli/: Makefile  cli.cpp  cli.h  cmds.cpp  cmds.h  config.cpp  help_cmd.h  meson.build  version.h  xpu-smi.vcxproj  xpu-smi.vcxproj.filters  xpum-smi.vcxproj  xpum-smi.vcxproj.filters
ial/cmn/: Makefile  cmd_agentsensor.cpp  cmd_agentsensor.h  cmd_agentset.cpp  cmd_agentset.h  cmd_amc.cpp  cmd_amc.h  cmd_amcsensor.cpp  cmd_amcsensor.h  cmd_config.cpp  cmd_config.h  cmd_diag.cpp  cmd_diag.h  cmd_discovery.cpp  cmd_discovery.h  cmd_dump.cpp  cmd_dump.h  cmd_group.cpp  (+37 more)
lztest/: CMakeLists.txt
oal/: Makefile  fs_lock.h  http_client.h  i2c_interface.h  meson.build  os.h  osvf.h
py/: .gitignore  CMakeLists.txt  DGM.py  DGMCore.py  GRPCDGMCore.py  README.md  api_pb2.py  api_pb2_grpc.py  genGrpcPyFiles.sh  prometheus_exporter.py  requirements.txt  rest.conf  xpum-rest.service
rest/: .gitignore  CMakeLists.txt  DGM.py.old  DGMCore.py.old  GRPCDGMCore.py  Grafana_dashboard_setup_guide_for_XPUM.md  README.md  exporter_main.py  genGrpcPyFiles.sh  gen_doc.py  gen_grpc_py_files.sh  grafana-dashboard.json  gunicorn.conf.py  kube_pod_resource.py  requirements.txt  xpum-rest.service  xpum-rest.service.in  xpum_logger.py  xpum_rest.service.in  xpum_rest.service.template  xpum_rest.service.template.in  xpum_rest.sh  xpum_rest_main.py
(+2489 files in other folders)
